// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonBeautyfier should render correctly with data 1`] = `
<pre
  style={
    Object {
      "backgroundColor": "rgb(39, 40, 34)",
      "overflow": "auto",
    }
  }
>
  <span
    style={
      Object {
        "color": "rgb(129, 211, 204)",
      }
    }
  >
    {
  </span>
  <div>
    <div>
      <span>
          
      </span>
      <span
        style={
          Object {
            "color": "rgb(129, 211, 204)",
          }
        }
      >
        "
        <span
          style={
            Object {
              "color": "rgb(201, 70, 56)",
            }
          }
        >
          key1
        </span>
        "
        <span
          style={
            Object {
              "color": "rgb(129, 211, 204)",
            }
          }
        >
          :
        </span>
         
      </span>
      <span
        style={
          Object {
            "color": "rgb(129, 211, 204)",
          }
        }
      >
        "
        <span
          style={
            Object {
              "color": "rgb(242, 152, 59)",
            }
          }
        >
          value1
        </span>
        "
      </span>
      <span
        style={
          Object {
            "color": "rgb(129, 211, 204)",
          }
        }
      >
        ,
      </span>
    </div>
    <div>
      <span>
          
      </span>
      <span
        style={
          Object {
            "color": "rgb(129, 211, 204)",
          }
        }
      >
        "
        <span
          style={
            Object {
              "color": "rgb(201, 70, 56)",
            }
          }
        >
          key2
        </span>
        "
        <span
          style={
            Object {
              "color": "rgb(129, 211, 204)",
            }
          }
        >
          :
        </span>
         
      </span>
      <span
        style={
          Object {
            "color": "rgb(129, 211, 204)",
          }
        }
      >
        "
        <span
          style={
            Object {
              "color": "rgb(242, 152, 59)",
            }
          }
        >
          value2
        </span>
        "
      </span>
      
    </div>
  </div>
  <span
    style={
      Object {
        "color": "rgb(129, 211, 204)",
      }
    }
  >
    
    }
  </span>
</pre>
`;

exports[`JsonBeautyfier should render correctly without data 1`] = `
<pre
  style={
    Object {
      "backgroundColor": "rgb(39, 40, 34)",
      "overflow": "auto",
    }
  }
>
  <span
    style={
      Object {
        "color": "rgb(201, 70, 56)",
      }
    }
  >
    null
  </span>
</pre>
`;

exports[`JsonBeautyfier should render correctly without data 2`] = `
<pre
  style={
    Object {
      "backgroundColor": "rgb(39, 40, 34)",
      "overflow": "auto",
    }
  }
>
  <span
    style={
      Object {
        "color": "rgb(201, 70, 56)",
      }
    }
  >
    null
  </span>
</pre>
`;
